finished loading data and showing it to the user, still buggy

--- a/data/helloworld.html
+++ b/data/helloworld.html
@@ -107,7 +107,7 @@
 
 
     <div id="rectangle">
-        <img id="bankImage" src="http://localhost:8000/getImageSrc" width="75%" style="margin-top: 20px;margin-bottom: 10px;"  >
+        <img id="bankImage" width="75%" style="margin-top: 20px;margin-bottom: 10px;"  >
         <br>
         <div id="arrow" onclick="leftArrowClick()" style="transform: rotate(135deg);margin-right: 180px;"></div>
         <div id="arrow" onclick="rightArrowClick()" style="transform: rotate(315deg);" ></div>
