--- a/data/helloworld.html
+++ b/data/helloworld.html
@@ -1,104 +1,106 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>learning html</title>
-<link rel="stylesheet" href="http://localhost:8000/firstPageCss">
-    <link rel="stylesheet" href="http://localhost:8000/getCss">
+    <link rel="stylesheet" href="http://localhost:8000/firstPageCss" />
+    <link rel="stylesheet" href="http://localhost:8000/getCss" />
+    <link rel="stylesheet" href="http://localhost:8000/getLoginCss">
     <style>
-        table,tr,th,td {
-            border: 1px solid black;
-            text-align: center;
-        }
-        table{
-            width: 50%;
-        }
+      table,
+      tr,
+      th,
+      td {
+        border: 1px solid black;
+        text-align: center;
+      }
+      table {
+        width: 50%;
+      }
     </style>
     <script>
-        window.onload=function(){
+      window.onload = function () {
         let dialogUp = true;
-        const signUpButton = document.getElementById('signUp');
-        const signInButton = document.getElementById('signIn');
-        const container = document.getElementById('container');
+        const signUpButton = document.getElementById("signUp");
+        const signInButton = document.getElementById("signIn");
+        const container = document.getElementById("container");
 
-        signUpButton.addEventListener('click', () => {
-	    container.classList.add("right-panel-active");
+        signUpButton.addEventListener("click", () => {
+          container.classList.add("right-panel-active");
         });
 
-        signInButton.addEventListener('click', () => {
-    	container.classList.remove("right-panel-active");
+        signInButton.addEventListener("click", () => {
+          container.classList.remove("right-panel-active");
         });
-        function signUp(data){
-            console.log(data);
-            // var xhr = new XMLHttpRequest();
-            // xhr.open("POST", "http://localhost:8000/signUp", true);
-            // xhr.setRequestHeader('Content-Type', 'application/json');
-            // xhr.send(data);
-            // console.log(xhr.response);     
+        function signUp(data) {
+          console.log(data);
+          // var xhr = new XMLHttpRequest();
+          // xhr.open("POST", "http://localhost:8000/signUp", true);
+          // xhr.setRequestHeader('Content-Type', 'application/json');
+          // xhr.send(data);
+          // console.log(xhr.response);
         }
-}
-
+      };
     </script>
-</head>
-<body bgcolor="#FFF5F5">
+  </head>
+  <body bgcolor="#FFF5F5">
     <script>
-       
-        let account = 1;
-        function rightArrowClick(){
-            if(document.getElementById('dot'+(account+1))!=null){ 
-            let divToGray  = document.getElementById('dot'+account);
-            account++;
-            let divToBlack = document.getElementById('dot'+account);
-            divToBlack.style.backgroundColor = "#000000";
-            divToGray.style.backgroundColor = "#C4C4C4";
+      let account = 1;
+      function rightArrowClick() {
+        if (document.getElementById("dot" + (account + 1)) != null) {
+          let divToGray = document.getElementById("dot" + account);
+          account++;
+          let divToBlack = document.getElementById("dot" + account);
+          divToBlack.style.backgroundColor = "#000000";
+          divToGray.style.backgroundColor = "#C4C4C4";
         }
+      }
+      function leftArrowClick() {
+        if (account != 1) {
+          let divToGray = document.getElementById("dot" + account);
+          account--;
+          let divToBlack = document.getElementById("dot" + account);
+          divToBlack.style.backgroundColor = "#000000";
+          divToGray.style.backgroundColor = "#C4C4C4";
         }
-        function leftArrowClick(){
-            if(account!=1){
-                let divToGray  = document.getElementById('dot'+account);
-            account--;
-            let divToBlack = document.getElementById('dot'+account);
-            divToBlack.style.backgroundColor = "#000000";
-            divToGray.style.backgroundColor = "#C4C4C4";
-            }
-        }
-        
+      }
     </script>
-    <div class="container" id="container" style="left: 0%;top: 50%;">
-        <div class="form-container sign-up-container">
-            <form action="http://localhost:8000/signUp" method="POST">
-                <h1>Create Account</h1>
-                <span>or use your email for registration</span>
-                <input type="email" name="email" placeholder="Email" />
-                <input type="password" name="password" placeholder="Password" />
-                <button type="submit">Sign Up</button>
-            </form>
+    <div class="container" id="container" style="left: 0%; top: 50%">
+      <div class="form-container sign-up-container">
+        <form action="http://localhost:8000/signUp" method="POST">
+          <h1>Create Account</h1>
+          <span>or use your email for registration</span>
+          <input type="email" name="email" placeholder="Email" />
+          <input type="password" name="password" placeholder="Password" />
+          <button type="submit">Sign Up</button>
+        </form>
+      </div>
+      <div class="form-container sign-in-container">
+        <form action="http://localhost:8000/login" method="POST">
+          <h1>Sign in</h1>
+          <span>or use your account</span>
+          <input type="email" name="email" placeholder="Email" />
+          <input type="password" name="password" placeholder="Password" />
+          <a href="">Forgot your password?</a>
+          <button>Sign In</button>
+        </form>
+      </div>
+      <div class="overlay-container">
+        <div class="overlay">
+          <div class="overlay-panel overlay-left">
+            <h1>Welcome Back!</h1>
+            <p>
+              To keep connected with us please login with your personal info
+            </p>
+            <button class="ghost" id="signIn">Sign In</button>
+          </div>
+          <div class="overlay-panel overlay-right">
+            <h1>Hello, Friend!</h1>
+            <p>Enter your personal details and start journey with us</p>
+            <button class="ghost" id="signUp">Sign Up</button>
+          </div>
         </div>
-        <div class="form-container sign-in-container">
-            <form action="http://localhost:8000/login" method="POST">
-                <h1>Sign in</h1>
-                <span>or use your account</span>
-                <input type="email" name="email" placeholder="Email" />
-                <input type="password" name="password" placeholder="Password" />
-                <a href="">Forgot your password?</a>
-                <button>Sign In</button>
-            </form>
-        </div>
-        <div class="overlay-container">
-            <div class="overlay">
-                <div class="overlay-panel overlay-left">
-                    <h1>Welcome Back!</h1>
-                    <p>To keep connected with us please login with your personal info</p>
-                    <button class="ghost" id="signIn">Sign In</button>
-                </div>
-                <div class="overlay-panel overlay-right">
-                    <h1>Hello, Friend!</h1>
-                    <p>Enter your personal details and start journey with us</p>
-                    <button class="ghost" id="signUp">Sign Up</button>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
